--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <script src="app.js"></script>
 
 
-        <h1 style="font-family: 'Taviraj', serif;">หากถูกรางวัลยินดีด้วยนะครับ</h1>
+        <h1 id="final" style="font-family: 'Taviraj', serif;">หากถูกรางวัลยินดีด้วยนะครับ</h1>
     </center>
 </body>
 
