--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <meta charset="UTF-8">
 
 <head>
+    <script src="path/to/vanilla.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Taviraj:wght@200&display=swap" rel="stylesheet">
     <style>
         .body {
