--- a/index.html
+++ b/index.html
@@ -16,15 +16,14 @@
 <body>
     <center>
         <h1 style="font-family: 'Taviraj', serif;">โปรแกรมสุ่มหวยระดับเทพ เลขท้าย 2 ตัว</h1>
-        <p style="font-family: 'Taviraj', serif;">สวัสดี
-            <p id="name"></p>เลขท้ายสองตัวที่คุณซื้อคือ</p>
+        <p id="name"></p>เลขท้ายสองตัวที่คุณซื้อคือ</p>
         <p style="font-family: 'Taviraj', serif;" id="lotternumber"></p>
         <p style="font-family: 'Taviraj', serif;">เลขที่ถูกรางวัลคือ</p>
         <p style="font-family: 'Taviraj', serif;" id="result"></p>
+        
+
+        <p id="final"></p>
         <script src="app.js"></script>
-
-
-        <h1 id="final" style="font-family: 'Taviraj', serif;">หากถูกรางวัลยินดีด้วยนะครับ</h1>
     </center>
 </body>
 
