update food cat

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         <p style="font-family: 'Taviraj', serif;" id="lotternumber"></p>
         <p style="font-family: 'Taviraj', serif;">เลขที่ถูกรางวัลคือ</p>
         <p style="font-family: 'Taviraj', serif;" id="result"></p>
-        
+
 
         <p id="final"></p>
-        <script src="app.js"></script>
+        <script src="forloop.js"></script>
     </center>
 </body>
 
