--- a/appcal.html
+++ b/appcal.html
@@ -15,9 +15,11 @@
 <body>
     <center>
         <h1 style="font-family: 'Taviraj', serif;">โปรแกรมแปรงหน่วย</h1>
-        <p id="fa"></p>
-        <p id="cd"></p>
-        <script src="appcal.js"></script>
+        <input id="inputvalue" type="text" />
+        <button onclick=" toCelsiusProgram(document.getElementById('inputvalue').innerText)">แปลงเป็น Celsius </button>
+        <button onclick=" toFaharenheitProgram() ">แปลงเป็น Faharenheit </button>
+        <p id="ans "></p>
+        <script src="appcal.js "></script>
     </center>
 </body>
 
