--- a/appcal.html
+++ b/appcal.html
@@ -16,9 +16,9 @@
     <center>
         <h1 style="font-family: 'Taviraj', serif;">โปรแกรมแปรงหน่วย</h1>
         <input id="inputvalue" type="text" />
-        <button onclick=" toCelsiusProgram(document.getElementById('inputvalue').innerText)">แปลงเป็น Celsius </button>
-        <button onclick=" toFaharenheitProgram() ">แปลงเป็น Faharenheit </button>
-        <p id="ans "></p>
+        <button onclick=" toCelsiusProgram(document.getElementById('inputvalue').value)"> แปลงเป็น Celsius </button>
+        <button onclick=" toFaharenheitProgram(document.getElementById('inputvalue').value)"> แปลงเป็น Faharenheit </button>
+        <p id="ans"></p>
         <script src="appcal.js "></script>
     </center>
 </body>
