--- a/aommoney.html
+++ b/aommoney.html
@@ -17,29 +17,29 @@
         <h1 style="font-family: 'Taviraj', serif;">โปรแกรมคำนวนเงินฝาก</h1>
 
         <label for="youdeposit"> จำนวนเงินที่จะฝาก : </label>
-        <input id="youdeposit" type="text" value="โปรดใส่เงินของคุณ" /> <br><br>
-        <button id="button" onclick="showdeposit()"> ยืนยันการฝากเงิน </button>
+        <input id="youdeposit" type="text" value="โปรดใส่เงินของคุณ" />
+        <button id="button" onclick="showdeposit()"> ยืนยันการฝากเงิน </button><br>
 
 
-        <p><b>เลือกประเภทการฝากของคุณ</b></p>
-        <input type="radio" id="typeofdeposit" name="typeofdeposit" value="0">
-        <label for="days">เลือกเป็นรายวัน</label>
-        <input type="radio" id="typeofdeposit" name="typeofdeposit" value="1">
-        <label for="week">เลือกเป็นรายสัปดาห์</label>
-        <input type="radio" id="typeofdeposit" name="typeofdeposit" value="2">
-        <label for="month">เลือกเป็นรายเดือน</label><br>
+        <label for="typedeposit"> เลือกประเภทการฝากขึ้นคุณ : </label>
+        <input id="typedeposit" type="text" value="รายวัน/รายเดือน/รายสัปดาห์" />
 
-        <button onclick="typedeposit(document.getElementById('typeofdeposit').value)">ยืนยันประเภทการฝาก</button><br><br><br>
+        <button onclick="typedeposit()">ยืนยันประเภทการฝาก</button><br>
 
 
         <label for="yeardeposit"> อยากจะฝากกี่ปี : </label>
-        <input id="yeardeposit" type="number" value="" /><br>
+        <input id="yeardeposit" type="number" value="" /> <button onclick="yearsdeposit()"> ยืนยันปีที่จะฝาก</button> <br>
         <label for="yeardok"> ดอกเบี้ยที่จะได้ : </label>
         <input id="yeardok" type="number" />
 
-        <button onclick="typedeposit(document.getElementById('typeofdeposit').value)">คลิ้กเพื่อคำนวน</button>
+        <button onclick="sumary()">คลิ้กเพื่อคำนวน</button>
 
-        <script src="aommoney.js "></script>
+
+        <div>
+            <p id="sum"></p>
+        </div>
+
+        <script src="aommoney.js"></script>
         <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
