--- a/aommoney.html
+++ b/aommoney.html
@@ -18,21 +18,20 @@
 
         <label for="youdeposit"> จำนวนเงินที่จะฝาก : </label>
         <input id="youdeposit" type="text" value="โปรดใส่เงินของคุณ" />
-        <button id="button" onclick="showdeposit()"> ยืนยันการฝากเงิน </button><br>
+
 
 
         <label for="typedeposit"> เลือกประเภทการฝากขึ้นคุณ : </label>
         <input id="typedeposit" type="text" value="รายวัน/รายเดือน/รายสัปดาห์" />
 
-        <button onclick="typedeposit()">ยืนยันประเภทการฝาก</button><br>
 
 
         <label for="yeardeposit"> อยากจะฝากกี่ปี : </label>
-        <input id="yeardeposit" type="number" value="" /> <button onclick="yearsdeposit()"> ยืนยันปีที่จะฝาก</button> <br>
+        <input id="yeardeposit" type="number" value="" /> <br>
         <label for="interestperyear"> ดอกเบี้ยที่จะได้ : </label>
         <input id="interestperyear" type="number" value="" />
 
-        <button onclick="interest()">คลิ้กเพื่อยืนยันดอกเบี้ย</button>
+
 
         <br><button onclick="sumary()">คลิ้กเพื่อยืนยันดอกเบี้ย</button>
 
